<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3D4DA">

            <ProgressBar
                android:id="@+id/progressBar5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:max="100"
                android:progress="20"
                android:progressDrawable="@drawable/progressbar"
                android:secondaryProgress="70" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#F1F2F8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training_pretime"
                android:textSize="36dp"
                android:textColor="#CDD0D3"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="Arial"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="370dp"
                android:text="@string/training_local_percentage"
                android:textColor="#333333"
                android:textSize="58dp"
                android:textStyle="bold"
                android:fontFamily="Arial">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="7dp"
                android:text="@string/training_overall_percentage"
                android:textSize="21dp"
                android:textColor="#333333"
                >

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dblrectagle_and_circle"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="30dp">

            </Button>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>