<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/community4_Leftarrow_btn"
            style="?borderlessButtonStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#EFEFEF"
            android:scaleType="fitXY"
            android:src="@drawable/cancel2">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/community4_newdymanic"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textSize="23dp">

        </TextView>

        <Button
            android:id="@+id/community4_Release_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_radius_green"
            android:text="@string/community4_release"
            android:textColor="@color/white"
            android:textSize="20dp">

        </Button>


    </LinearLayout>

    <EditText
        android:id="@+id/community4_Sharetext_edit"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/community4_sharehint"
        android:padding="10dp"
        android:textColorHint="#DADADA"
        android:textSize="18dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/location">

        </ImageView>

        <TextView
            android:id="@+id/locate"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="地点"
            android:textSize="16sp">

        </TextView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center">

        <GridView
            android:id="@+id/community4_gridview"
            android:layout_width="250dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:numColumns="3"
            android:scrollbars="none"
            android:verticalSpacing="5dp">


        </GridView>

        <ImageButton
            android:id="@+id/community4_AddImage_btn4"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="#EFEFEF"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/add">

        </ImageButton>
    </RelativeLayout>

</LinearLayout>