<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <Button
                    android:id="@+id/community_homepage_release"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_radius_green"
                    android:text="@string/community4_release"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/community_homepage_bgimg">

                </Button>

                <Button
                    android:id="@+id/community_homepage_username"
                    style="?borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:text="@string/community1_playerid"
                    android:textColor="#696969"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/community_homepage_release">

                </Button>

                <ImageView
                    android:id="@+id/community_homepage_bgimg"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/scenery"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/community_homepage_headprotrait"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/no_background"
                    android:scaleType="fitCenter"
                    android:src="@drawable/headprotrait"
                    app:layout_constraintBottom_toBottomOf="@+id/community_homepage_bgimg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/community_homepage_bgimg"
                    app:riv_oval="true">

                </com.makeramen.roundedimageview.RoundedImageView>

                <ImageButton
                    android:id="@+id/community_homepage_back"
                    style="?borderlessButtonStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/no_background"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back_white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageButton>

                <ImageButton
                    android:id="@+id/community_homepage_more"
                    style="?borderlessButtonStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/no_background"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_more_white"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageButton>

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/community_homepage_username">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <TableRow>

                                <Button
                                    android:id="@+id/community_homepage_followedNum"
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/community2_concern_num"
                                    android:textSize="18dp"
                                    android:textStyle="bold">

                                </Button>

                                <Button
                                    android:id="@+id/community_homepage_fansNum"
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/community2_fans_num"
                                    android:textSize="18dp"
                                    android:textStyle="bold">

                                </Button>

                                <Button
                                    android:id="@+id/community_homepage_likeNum"
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:text="@string/community2_praised_num"
                                    android:textSize="18dp"
                                    android:textStyle="bold">

                                </Button>
                            </TableRow>

                            <TableRow android:layout_marginTop="10dp">

                                <TextView
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:gravity="center"
                                    android:text="@string/community2_concern"
                                    android:textColor="#AEAEAE"
                                    android:textSize="15dp">

                                </TextView>

                                <TextView
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:gravity="center"
                                    android:text="@string/community2_fans"
                                    android:textColor="#AEAEAE"
                                    android:textSize="15dp">

                                </TextView>

                                <TextView
                                    style="?borderlessButtonStyle"
                                    android:layout_height="20dp"
                                    android:layout_weight="1"
                                    android:background="@color/white"
                                    android:gravity="center"
                                    android:text="@string/community2_praised"
                                    android:textColor="#AEAEAE"
                                    android:textSize="15dp">

                                </TextView>
                            </TableRow>
                        </TableLayout>

                    </LinearLayout>

                </RelativeLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/community_homepage_tablayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                    app:tabBackground="@color/white"
                    app:tabIndicatorColor="#59535E"
                    app:tabIndicatorFullWidth="false"
                    app:tabSelectedTextColor="@android:color/black">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/community_homepage_tab1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="动态" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/community_homepage_tab2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="记录" />

                </com.google.android.material.tabs.TabLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="5dp"
                android:background="#FAFAFA" />

            <com.example.myapplication.WrapContentHeightViewPager
                android:id="@+id/community_homepage_viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>