<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/community1_leftarrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/leftarrow">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:text="动态详情"
            android:textColor="#3D4428"
            android:textSize="23dp">

        </TextView>

    </LinearLayout>

    <ScrollView
        android:id="@+id/community1_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:scrollbars="none"
        android:visibility="visible">
        <!--          ov  575-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!--                player页面-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView

                        android:id="@+id/userHeadprotrait"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/headprotrait"
                        app:riv_oval="true" />

                    <TextView
                        android:id="@+id/userNickName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="UserName"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/community1_playersay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/community1_playertext"
                    android:textColor="#353535"
                    android:textSize="16sp">

                </TextView>

                <com.jaeger.ninegridimageview.NineGridImageView
                    android:id="@+id/sharedetail_nine_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="30dp"
                    app:imgGap="4dp"
                    app:showStyle="fill"
                    app:singleImgSize="120dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="#F0F0F2"
                android:orientation="vertical">
                <!--                间隔player和visitor页面-->

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">
                <!--                visitor页面-->

                <TextView
                    android:id="@+id/community1_visitorthu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/community1_visitorsthu"
                    android:textSize="18sp">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#F0F0F2"
                    android:orientation="horizontal">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/community1_visitors_commentnum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/community1_visitors_commentnum"
                        android:textColor="#AFAFAF"
                        android:textSize="18sp">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="按热度"
                        android:textColor="#AFAFAF"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="| 按时间"
                        android:textColor="#AFAFAF"
                        android:textSize="18sp" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/community_reviews_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="false"
                        android:visibility="visible"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_comment_main" />
                </RelativeLayout>>


                <Button
                    android:id="@+id/sharedetail_loadmore_comments"
                    style="?borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/community1_visitors_opencomment"
                    android:textColor="#353535"
                    android:textSize="15dp">

                </Button>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/community1_saysomething"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/community1_edit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_radius_gray"
            android:drawableLeft="@drawable/pen"
            android:hint="@string/community1_edit"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#D3D3D3"
            android:textSize="22dp">

        </EditText>

        <ImageButton
            android:id="@+id/community1_thumbs"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/thumbs">

        </ImageButton>

        <TextView
            android:id="@+id/community1_thumbsnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="4dp"
            android:gravity="center"
            android:text="@string/community1_thumbsnum"
            android:textColor="#999999"
            android:textSize="20dp">

        </TextView>

        <ImageButton
            android:id="@+id/community1_news"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/news">

        </ImageButton>

        <TextView
            android:id="@+id/community1_newsnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="4dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/community1_newsnum"
            android:textColor="#999999"
            android:textSize="20dp">

        </TextView>


    </LinearLayout>

</LinearLayout>